--- a/index.html
+++ b/index.html
@@ -1,11 +1,99 @@
 <!DOCTYPE html>
 <html>
-<body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Services</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,500&family=Inconsolata:wght@500&display=swap" rel="stylesheet">
+</head>
+<body>        
+    <div class="container" style="text-align: center;">
+        <div class="card p-3 m-3" style="background: #99ffff">
+            <div class="row">
+                <div class="col-md-6 m-3" style="margin: auto;" >
+                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Land & Building Survey</b></h4>
+                    <hr>
+                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
 
-<h2>The XMLHttpRequest Object</h2>
-<p id="demo"></p>
+                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
+                </div>
+                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                </div>
+            </div>
+        </div>
+        <div class="card p-3 m-3" style="background: #3399ff">
+            <div class="row">
+                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                </div>
+                <div class="col-md-6 m-3" style="margin: auto;" >
+                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Plan & Estimate</b></h4>
+                    <hr>
+                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
 
-<script src="test1.js"></script>
+                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
+                </div>
+            </div>
+        </div>
+        <div class="card p-3 m-3" style="background: #99ffff">
+            <div class="row">
+                <div class="col-md-6 m-3" style="margin: auto;" >
+                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Quantity Survey</b></h4>
+                    <hr>
+                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
 
+                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
+                </div>
+                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                </div>
+            </div>
+        </div>
+        <div class="card p-3 m-3" style="background: #3399ff">
+            <div class="row">
+                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                </div>
+                <div class="col-md-6 m-3" style="margin: auto;" >
+                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Valuation</b></h4>
+                    <hr>
+                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+
+                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
+                </div>
+            </div>
+        </div>
+        <div class="card p-3 m-3" style="background: #99ffff">
+            <div class="row">
+                <div class="col-md-6 m-3" style="margin: auto;" >
+                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Construction</b></h4>
+                    <hr>
+                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+
+                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
+                </div>
+                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                </div>
+            </div>
+        </div>
+        <div class="card p-3 m-3" style="background: #3399ff">
+            <div class="row">
+                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                </div>
+                <div class="col-md-6 m-3" style="margin: auto;" >
+                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Renovation</b></h4>
+                    <hr>
+                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+
+                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
