--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                     In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
                 </div>
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
             </div>
         </div>
         <div class="card p-3 m-3" style="background: #3399ff">
             <div class="row">
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
                 <div class="col-md-6 m-3" style="margin: auto;" >
                     <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Plan & Estimate</b></h4>
@@ -48,14 +48,14 @@
                     In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
                 </div>
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
             </div>
         </div>
         <div class="card p-3 m-3" style="background: #3399ff">
             <div class="row">
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
                 <div class="col-md-6 m-3" style="margin: auto;" >
                     <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Valuation</b></h4>
@@ -76,14 +76,14 @@
                     In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
                 </div>
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
             </div>
         </div>
         <div class="card p-3 m-3" style="background: #3399ff">
             <div class="row">
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
                 <div class="col-md-6 m-3" style="margin: auto;" >
                     <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Renovation</b></h4>
