--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,500&family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 </head>
-<body>        
+<body style="background: #ffff99">        
     <div class="container" style="text-align: center;">
         <div class="card p-3 m-3" style="background: #99ffff">
             <div class="row">
