--- a/index.html
+++ b/index.html
@@ -5,10 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Services</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,500&family=Inconsolata:wght@500&display=swap" rel="stylesheet">
 </head>
-<body style="background: #ffff99">        
+<body style="background: #ffff99">
+
+    <header class="m-3 sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+          <a class="navbar-brand" href="#">SSS CONSTRUCTION</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Services</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Timeline</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Projects
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Projects</a>
+                  <a class="dropdown-item" href="#">Special Projects</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+    </header>
+
     <div class="container" style="text-align: center;">
         <div class="card p-3 m-3" style="background: #99ffff">
             <div class="row">
@@ -20,14 +61,14 @@
                     In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
                 </div>
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
             </div>
         </div>
         <div class="card p-3 m-3" style="background: #3399ff">
             <div class="row">
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
                 <div class="col-md-6 m-3" style="margin: auto;" >
                     <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Plan & Estimate</b></h4>
@@ -48,14 +89,14 @@
                     In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
                 </div>
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
             </div>
         </div>
         <div class="card p-3 m-3" style="background: #3399ff">
             <div class="row">
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
                 <div class="col-md-6 m-3" style="margin: auto;" >
                     <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Valuation</b></h4>
@@ -76,14 +117,14 @@
                     In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
                 </div>
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
             </div>
         </div>
         <div class="card p-3 m-3" style="background: #3399ff">
             <div class="row">
                 <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="https://raw.githubusercontent.com/TK-Sparrow/testhost/master/berk_buddies_logo.jpg" class="w-100 h-100">
+                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
                 </div>
                 <div class="col-md-6 m-3" style="margin: auto;" >
                     <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Renovation</b></h4>
@@ -95,5 +136,8 @@
             </div>
         </div>
     </div>
+    <footer class="m-3 p-3" style="background: black; text-align: center; ">
+        <h4>This Site Is created by Berk Buddies</h4>
+    </footer>
 </body>
 </html>
