--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Services</title>
+    <title>Home</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -55,7 +55,7 @@
     	<h1>This Site is Under Development</h1>
 
     </div>
-    <footer class="m-3 p-3" style="background: black; text-align: center; ">
+    <footer class="m-3 p-3 fixed-bottom" style="background: black; text-align: center; ">
         <h4>This Site Is created by Berk Buddies</h4>
     </footer>
 </body>
