--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contactus">Contact Us</a>
+                <a class="nav-link" href="contactus.html">Contact Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About Us</a>
