--- a/services.html
+++ b/services.html
@@ -1,143 +1,110 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Services</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@1,500&family=Inconsolata:wght@500&display=swap" rel="stylesheet">
-</head>
-<body style="background: #ffff99">
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="stylesheet" href="CSS/services.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+  </head>
+  <body>
+    <div class="services-section">
+      <div class="inner-width">
+        <h1 class="section-title">Our Services</h1>
+        <div class="border"></div>
+        <div class="services-container">
 
-    <header class="m-3 sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-          <a class="navbar-brand" href="#">SSS CONSTRUCTION</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Timeline</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Projects
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <a class="dropdown-item" href="#">Projects</a>
-                  <a class="dropdown-item" href="#">Special Projects</a>
-                </div>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contactUs.html">Contact Us</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">About Us</a>
-              </li>
-            </ul>
+          <div class="service-box">
+            <div class="service-icon">
+              <h4>01</h4>
+            </div>
+            <div class="service-title">Land & Building Survey</div>
+            <div class="service-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
           </div>
-        </nav>
-    </header>
 
-    <div class="container" style="text-align: center;">
-        <div class="card p-3 m-3" style="background: #99ffff">
-            <div class="row">
-                <div class="col-md-6 m-3" style="margin: auto;" >
-                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Land & Building Survey</b></h4>
-                    <hr>
-                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
-
-                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
-                </div>
-                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
-                </div>
+          <div class="service-box">
+            <div class="service-icon">
+              <h4>02</h4>
             </div>
-        </div>
-        <div class="card p-3 m-3" style="background: #3399ff">
-            <div class="row">
-                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
-                </div>
-                <div class="col-md-6 m-3" style="margin: auto;" >
-                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Plan & Estimate</b></h4>
-                    <hr>
-                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
-
-                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
-                </div>
+            <div class="service-title">Plan & Estimate</div>
+            <div class="service-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </div>
-        </div>
-        <div class="card p-3 m-3" style="background: #99ffff">
-            <div class="row">
-                <div class="col-md-6 m-3" style="margin: auto;" >
-                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Quantity Survey</b></h4>
-                    <hr>
-                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+          </div>
 
-                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
-                </div>
-                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
-                </div>
+          <div class="service-box">
+            <div class="service-icon">
+              <h4>03</h4>
             </div>
-        </div>
-        <div class="card p-3 m-3" style="background: #3399ff">
-            <div class="row">
-                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
-                </div>
-                <div class="col-md-6 m-3" style="margin: auto;" >
-                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Valuation</b></h4>
-                    <hr>
-                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+            <div class="service-title">Quantity Survey</div>
+            <div class="service-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
 
-                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
-                </div>
+          <div class="service-box">
+            <div class="service-icon">
+              <h4>04</h4>
             </div>
-        </div>
-        <div class="card p-3 m-3" style="background: #99ffff">
-            <div class="row">
-                <div class="col-md-6 m-3" style="margin: auto;" >
-                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Construction</b></h4>
-                    <hr>
-                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+            <div class="service-title">Valuation</div>
+            <div class="service-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
 
-                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
-                </div>
-                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
-                </div>
+          <div class="service-box">
+            <div class="service-icon">
+              <h4>05</h4>
             </div>
-        </div>
-        <div class="card p-3 m-3" style="background: #3399ff">
-            <div class="row">
-                <div class="col-md-4 " style="margin-right: auto;margin-left: auto;" >
-                    <img src="berk_buddies_logo.jpg" class="w-100 h-100">
-                </div>
-                <div class="col-md-6 m-3" style="margin: auto;" >
-                    <h4 style="font-family: 'Fira Sans', sans-serif; font-size: 25px"><b>Renovation</b></h4>
-                    <hr>
-                    <p style="font-family: 'Inconsolata', monospace; font-size: 15px"><b>Through General Contracting, we undertake single point responsibility of core and shell construction (civil & structural works) along with internal infrastructure (roads, landscaping etc.) finishes (internal & external both), MEP (HVAC, Electrical, Plumbing, Sanitary, Fire Fighting Systems etc.) and other specialized services (BMS, Elevators, Landscaping etc.). Often this includes procurement of material, services, OEM and labour or/and any combination of these.
+            <div class="service-title">Construction</div>
+            <div class="service-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
 
-                    In select cases, specialized suppliers/OEM vendors etc. for some of these works, may be nominated by the client/sponsor or appointed jointly with us. JMC takes the overall responsibility of coordination for smooth execution of the project as per the schedule.</b></p>
-                </div>
+          <div class="service-box">
+            <div class="service-icon">
+              <h4>06</h4>
             </div>
+            <div class="service-title">Renovation</div>
+            <div class="service-desc">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-    <footer class="m-3 p-3" style="background: black; text-align: center; ">
-        <h4>This Site Is created by Berk Buddies</h4>
-    </footer>
-</body>
+  </body>
 </html>
