--- a/contactUs.html
+++ b/contactUs.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="CSS/index.css">  
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/contactUs.css">
+  <link rel="stylesheet" type="text/css" href="CSS/contactUs.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
