--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ SSS <span>Construction</span></div>
 <li><a href="timeline.html">Timeline</a></li>
 <li><a href="services.html">Services</a></li>
 <li><a href="contactUs.html">Contact</a></li>
-<li><a href="aboutUS.html">About</a></li>
+<li><a href="aboutUs.html">About</a></li>
 </ul>
 </nav>
    <header id="showcase">
