--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@ SSS <span>Construction</span></div>
 <li><a href="timeline.html">Timeline</a></li>
 <li><a class="active" href="services.html">Services</a></li>
 <li><a href="contactUs.html">Contact</a></li>
-<li><a href="aboutUS.html">About</a></li>
+<li><a href="aboutUs.html">About</a></li>
 </ul>
 </nav>
     <div class="services-section">
