--- a/timeline.html
+++ b/timeline.html
@@ -25,7 +25,7 @@ SSS <span>Construction</span></div>
 <li><a class="active" href="timeline.html">Timeline</a></li>
 <li><a href="services.html">Services</a></li>
 <li><a href="contactUs.html">Contact</a></li>
-<li><a href="aboutUS.html">About</a></li>
+<li><a href="aboutUs.html">About</a></li>
 </ul>
 </nav>
     <div class="wrapper">
