--- a/contactUs.html
+++ b/contactUs.html
@@ -20,7 +20,7 @@ SSS <span>Construction</span></div>
       </label>
       <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="#">Project</a></li>
+<li><a href="projects.html">Project</a></li>
 <li><a href="timeline.html">Timeline</a></li>
 <li><a href="services.html">Services</a></li>
 <li><a class="active" href="contactUs.html">Contact</a></li>
