--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ SSS <span>Construction</span></div>
       </label>
       <ul>
 <li><a class="active" href="index.html">Home</a></li>
-<li><a href="#">Project</a></li>
+<li><a href="projects.html">Project</a></li>
 <li><a href="timeline.html">Timeline</a></li>
 <li><a href="services.html">Services</a></li>
 <li><a href="contactUs.html">Contact</a></li>
