--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ SSS <span>Construction</span></div>
     <h1>Welcome To SSS Construction</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi officiis ipsum officia numquam expedita ullam.</p>
     <div id="outer">
-      <a href="#" class="button">Our Projects</a> 
-      <a href="#" class="button">Our Services</a>
+      <a href="projects.html" class="button">Our Projects</a> 
+      <a href="services.html" class="button">Our Services</a>
     </div>
   </header>
 <footer>
